# handscribe

./: .gitignore  .makefile.inc  Makefile  README.md  main.py  pyproject.toml
docs/: key_classifier_v1.hdf5  key_classifier_v1.tflite  key_coordinates_v1.csv  unused.txt  unused_numpy.txt
docs/unused/: key_classifier.hdf5  key_classifier.tflite  unused_constants.txt
models/: key_classifier.hdf5  key_classifier.tflite
models/data/: class_labels.csv  key_coordinates.csv  unused.txt  words.txt
src/: __init__.py  constants.py  dataclass.py  key_classifier.py  key_train.py  main.py  sign_language_translator.py  visuals.py
src/base/: constants.py  visuals.py
src/core/: visuals.py
src/machine_learning/: key_classifier.py  key_train.py
src/neural_network/: key_classifier.py  key_train.py
tests/: test_dataclass.py  test_key_classifier.py  test_sign_language_translator.py
