[tool.poetry]
name = "sign-language-ai-translator"
version = "0.1.0"
description = ""
authors = ["Ren de la Cruz <ren_delacruz@outlook.com>"]
readme = "README.md"
packages = [{include = "sign_language_ai_translator"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
mediapipe = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
