[tool.poetry]
name = "sign-language-ai-translator"
version = "0.1.0"
description = ""
authors = ["Ren de la Cruz <ren_delacruz@outlook.com>"]
readme = "README.md"
packages = [{include = "sign_language_ai_translator"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
opencv-python = "^4.6.0.66"
mediapipe = "^0.9.0"
numpy = "1.23"
colour = "^0.1.5"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
mypy = "^0.991"
ruff = "^0.0.236"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
exclude = "tests"

[tool.ruff]
target-version = "py310"
select = ["A", "B", "C", "F", "I", "E", "W", "N", "UP", "RUF", "PTH", "ARG", "TID", "SIM", "PIE", "DTZ"]
ignore = ["E999"]
fixable = ["I", "UP", "W", "F"]
